--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,11 @@
     <modules>
 <!--        <module>confsvr</module>-->
 <!--        <module>eurekasvr</module>-->
-<!--        <module>authentication-service</module>-->
-        <module>zipkinsvr</module>
+        <module>authentication-service</module>
+<!--        <module>zipkinsvr</module>-->
 <!--        <module>zuulsvr</module>-->
-<!--        <module>user-service</module>-->
-<!--        <module>file-system-service</module>-->
+        <module>user-service</module>
+        <module>file-system-service</module>
 <!--        <module>filesharing-service</module>-->
 <!--        <module>test-service</module>-->
     </modules>
